--- a/example_notebooks/Example Notebook.ipynb
+++ b/example_notebooks/Example Notebook.ipynb
@@ -80,10 +80,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3300c829-4bbc-4fd2-8745-5b19161ea29e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sex': 'female',\n",
+       " 'age': 40,\n",
+       " 'total_cholesterol': 200,\n",
+       " 'hdl_cholesterol': 50,\n",
+       " 'systolic_bp': 120,\n",
+       " 'has_diabetes': True,\n",
+       " 'current_smoker': True,\n",
+       " 'bmi': 25,\n",
+       " 'egfr': 70,\n",
+       " 'on_htn_meds': True,\n",
+       " 'on_cholesterol_meds': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.iloc[0].to_dict()"
    ]
@@ -104,10 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2574f72d-97e1-4e25-81c0-2c251149d4f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.723678963112583"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyprevent.calculate_10_yr_ascvd_risk(**df.iloc[0].to_dict())"
    ]
@@ -122,10 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c4d60014-6770-4a86-934f-d051698d6ee7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.008061525002453"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyprevent.calculate_30_yr_ascvd_risk(\n",
     "    sex=\"MALE\",\n",
@@ -154,10 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4ee0db2e-251a-4b7f-b138-90f9b69cb7c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Sex must be either 'male' or 'female'.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpyprevent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_30_yr_ascvd_risk\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43msex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43munknown\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m40\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtotal_cholesterol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m200\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhdl_cholesterol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43msystolic_bp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m120\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhas_diabetes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcurrent_smoker\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbmi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m25\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m    \u001b[49m\u001b[43megfr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m70\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mon_htn_meds\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mon_cholesterol_meds\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/pyprevent/lib/python3.10/site-packages/pyprevent/ascvd_calc.py:130\u001b[0m, in \u001b[0;36mcalculate_30_yr_ascvd_risk\u001b[0;34m(sex, age, total_cholesterol, hdl_cholesterol, systolic_bp, has_diabetes, current_smoker, bmi, egfr, on_htn_meds, on_cholesterol_meds)\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalculate_30_yr_ascvd_risk\u001b[39m(\n\u001b[1;32m     76\u001b[0m     sex: \u001b[38;5;28mstr\u001b[39m,\n\u001b[1;32m     77\u001b[0m     age: \u001b[38;5;28mfloat\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     86\u001b[0m     on_cholesterol_meds: \u001b[38;5;28mbool\u001b[39m,\n\u001b[1;32m     87\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m     88\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;124;03m    Calculate the 30-year risk of atherosclerotic cardiovascular disease (ASCVD).\u001b[39;00m\n\u001b[1;32m     90\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;124;03m    # Returns: Estimated 30-year ASCVD risk percentage (e.g., 12.3)\u001b[39;00m\n\u001b[1;32m    129\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 130\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_pyprevent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_30_yr_ascvd_rust\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    131\u001b[0m \u001b[43m        \u001b[49m\u001b[43msex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    132\u001b[0m \u001b[43m        \u001b[49m\u001b[43mage\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    133\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtotal_cholesterol\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    134\u001b[0m \u001b[43m        \u001b[49m\u001b[43mhdl_cholesterol\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    135\u001b[0m \u001b[43m        \u001b[49m\u001b[43msystolic_bp\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    136\u001b[0m \u001b[43m        \u001b[49m\u001b[43mhas_diabetes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    137\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcurrent_smoker\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    138\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbmi\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    139\u001b[0m \u001b[43m        \u001b[49m\u001b[43megfr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    140\u001b[0m \u001b[43m        \u001b[49m\u001b[43mon_htn_meds\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    141\u001b[0m \u001b[43m        \u001b[49m\u001b[43mon_cholesterol_meds\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    142\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: Sex must be either 'male' or 'female'."
+     ]
+    }
+   ],
    "source": [
     "pyprevent.calculate_30_yr_ascvd_risk(\n",
     "    \n",
@@ -403,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1a4b07d7-b4ad-4962-85bc-54fa7c782709",
    "metadata": {},
    "outputs": [],
@@ -526,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "8c3ce9f9-594d-43a3-af67-a6f3349bb904",
    "metadata": {},
    "outputs": [
@@ -534,7 +590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to run Pure Python Implementation: 18.628560791985365 seconds\n"
+      "Time to run Pure Python Implementation: 18.800785583007382 seconds\n"
      ]
     }
    ],
@@ -549,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "657607b1-95da-40e0-b857-2c4254c1137e",
    "metadata": {},
    "outputs": [
@@ -557,7 +613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to run Current Implementation: 8.709082334011327 seconds\n"
+      "Time to run Current Implementation: 8.53280437499052 seconds\n"
      ]
     }
    ],
@@ -571,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "021fc071-3b89-4509-8591-cdc5f37a2f30",
    "metadata": {},
    "outputs": [
@@ -579,7 +635,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to run Rust Parallel Implementation: 2.570569791016169 seconds\n"
+      "Time to run Rust Parallel Implementation: 2.22986929200124 seconds\n"
      ]
     }
    ],
@@ -603,17 +659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "3010eaaa-addf-4afb-904e-aa6f95275e08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.246860543172154"
+       "8.431339742848447"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,6 +682,55 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b8753ec-3149-477b-8113-a6e10334dfe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.perf_counter()\n",
+    "test_df = df.copy()\n",
+    "test_df[\"sex\"] = test_df[\"sex\"].str.lower().map({\"female\": 0, \"male\": 1})\n",
+    "test_df[\n",
+    "    [\"has_diabetes\", \"current_smoker\", \"on_htn_meds\", \"on_cholesterol_meds\"]\n",
+    "] = test_df[\n",
+    "    [\"has_diabetes\", \"current_smoker\", \"on_htn_meds\", \"on_cholesterol_meds\"]\n",
+    "].astype(\n",
+    "    int\n",
+    ")\n",
+    "data = test_df.values.astype(np.float64)\n",
+    "r = pyprevent._pyprevent.calculate_10_yr_ascvd_rust_parallel_np(data=data)\n",
+    "end = time.perf_counter()\n",
+    "rust_parallel = end - start\n",
+    "print(f\"Time to run Rust Parallel Implementation: {rust_parallel} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f5a806-4a1f-4be7-84b9-66553f105ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.perf_counter()\n",
+    "test_df = df.copy()\n",
+    "data = [row for row in test_df.itertuples(index=False)]\n",
+    "\n",
+    "r = pyprevent._pyprevent.calculate_10_yr_ascvd_rust_parallel(data=data)\n",
+    "end = time.perf_counter()\n",
+    "rust_parallel = end - start\n",
+    "print(f\"Time to run Rust Parallel Implementation: {rust_parallel} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57933ce2-1677-4baf-a592-a788ff9d3bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a847a8ca-2258-4943-b231-3a83f90032b1",
    "metadata": {},
    "outputs": [],
    "source": []
